# macjmp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
CMakeModules/: AppleConfiguration.cmake  CPackConfiguration.cmake  CompilerFlags.cmake  FetchDependencies.cmake  NameConfiguration.cmake  Win32Configuration.cmake
bundle/osx/: Info.plist.in
docs/: SWIFT_MIGRATION.md
native/: mpvAudioPlayer.js  mpvVideoPlayer.js  nativeshell.js
resources/settings/: settings_description.json
scripts/: build-macos-arm64.sh  build-swift-prototype.sh  fix-install-names.py  install-dylibs.py  verify-macos-arm64.py
src/: CMakeLists.txt  main.cpp
src/display/: CMakeLists.txt  DisplayManager.cpp
src/input/: InputRoku.cpp
src/player/: CodecsComponent.cpp  PlayerComponent.cpp
src/power/: CMakeLists.txt
src/settings/: SettingsComponent.cpp
src/shared/: Paths.cpp
src/system/: SystemComponent.cpp  SystemComponent.h
src/taskbar/: CMakeLists.txt
src/ui/: ErrorMessage.cpp  webview.qml
src/utils/: Log.cpp
swift-native/: Package.swift
swift-native/AppResources/: Info.plist
swift-native/Sources/MacJMPNative/: main.swift
